// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a series title properly 1`] = `
.c0 {
  color: black;
  text-align: center;
}

.c0 .c1 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c1 img {
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:900px) {
  .c0 .c1 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
  color="black"
>
  <h1
    className="bUZGRr irRDJY"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize={
      Array [
        "42px",
        "60px",
        "100px",
      ]
    }
  >
    The Future of Art
  </h1>
</div>
`;

exports[`renders a series with children properly 1`] = `
.c0 {
  color: black;
  text-align: center;
}

.c0 .c1 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c1 img {
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:900px) {
  .c0 .c1 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
  color="black"
>
  <h1
    className="bUZGRr irRDJY"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize={
      Array [
        "42px",
        "60px",
        "100px",
      ]
    }
  >
    <div>
      Child 
      title
    </div>
  </h1>
</div>
`;

exports[`renders a sponsored series title properly 1`] = `
.c1 {
  display: block;
}

.c4 img {
  max-width: 240px;
  max-height: 40px;
  object-fit: contain;
  object-position: left;
}

.c2 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  line-height: 1.1em;
  margin-bottom: 20px;
}

.c0 {
  color: black;
  text-align: center;
}

.c0 .c3 {
  padding-top: 5px;
  padding-bottom: 40px;
}

.c0 .c3 img {
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:720px) {
  .c2 {
    font-family: Unica77LLWebMedium,Arial,serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4em;
  }
}

@media (max-width:900px) {
  .c0 .c3 {
    padding-bottom: 0;
  }
}

<div
  className="c0"
  color="black"
>
  <h1
    className="bUZGRr irRDJY"
    fontFamily="Unica77LLWebRegular, 'Helvetica Neue', Helvetica, Arial, sans-serif"
    fontSize={
      Array [
        "42px",
        "60px",
        "100px",
      ]
    }
  >
    The Future of Art
  </h1>
  <div
    className="PartnerBlock c1"
  >
    <div
      className="c2"
    >
      Presented in Partnership with
    </div>
    <div
      className="c3 c4"
    >
      <a
        href="http://artsy.net"
        onClick={[Function]}
        target="_blank"
      >
        <img
          src="https://d7hftxdivxxvm.cloudfront.net?resize_to=width&src=https%3A%2F%2Fartsy-media-uploads.s3.amazonaws.com%2FGEu3iYW6CQhbVxsjpOYwZQ%252FGKL_Wort-Bildmarke_negative_rgb%2B2.png&width=240&quality=80"
        />
      </a>
    </div>
  </div>
</div>
`;
